deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dummy-drc-service
spec:
  selector:
    app: dummy-drc # this should match the pod label in deployment.yml
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
